[package]
name = "tekken_learning_environment"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tekken_learning_environment_cli"
path = "src/main.rs"

[[bin]]
name = "tekken_learning_environment_gui"
path = "src/tekken_learning_environment_gui.rs"

[[bin]]
name = "hello_emu"
path = "src/hello_emu.rs"

[[bin]]
name = "emu_explorer"
path = "src/emu_explorer.rs"

[[bin]]
name = "test_thread"
path = "src/test_thread.rs"

[[bin]]
name = "hello_psx"
path = "src/hello_psx.rs"

[[bin]]
name = "psx_gui"
path = "src/psx_gui.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
generic-array = "0.14.7"
image = "0.24.6"
log = "0.4.17"
md-5 = "0.10.5"
num-traits = "0.2.15"
sha2 = "0.10.6"
tim2 = "0.3.1"
egui = "0.22.0"
eframe = "0.22.0"
glow = "0.12"
egui_glow = "0.22.0"
byteorder = "1.4.3"
