[package]
name = "tekken_learning_environment"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tekken_learning_environment_gui"
path = "src/tekken_learning_environment_gui.rs"

[[bin]]
name = "psx_gui"
path = "src/psx_gui.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
eframe = "0.22.0"
egui = "0.22.0"
egui_file = "0.10.2"
egui_glow = "0.22.0"
env_logger = "0.10.0"
image = "0.24.6"
imageproc = "0.23.0"
log = "0.4.17"
rand = "0.8.5"
serde = "1.0.188"
serde_arrays = "0.1.0"
serde_json = "1.0.107"
